--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -58,6 +58,7 @@ font-size: 18px;
     align-items: flex-start;
     gap: 12px;
     font-size: 32px;
+    margin-left: 15px;
 }
 
 .weather-data .col span{
