--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -64,6 +64,7 @@ font-size: 18px;
 .weather-data .col span{
     display: block;
     font-size: 16px;
+    color: #fff;
 }
 .weather-data .col img{
     width: 26px;
